--- a/_config.yml
+++ b/_config.yml
@@ -1,22 +1,26 @@
+# Dependencies
+markdown:         redcarpet
+highlighter:      pygments
+
 # Permalinks
-#
-# Use of `relative_permalinks` ensures post links from the index work properly.
-permalink:           pretty
-relative_permalinks: true
+permalink:        pretty
 
 # Setup
-title:               Lanyon
-tagline:             'A Jekyll theme'
-description:         'A reserved <a href="http://jekyllrb.com" target="_blank">Jekyll</a> theme that places the utmost gravity on content with a hidden drawer. Made by <a href="https://twitter.com/mdo" target="_blank">@mdo</a>.'
-url:                 http://lanyon.getpoole.com
-baseurl:             ''
-paginate:            5
+title:            Peter Zukerman
+tagline:          ''
+description:      'Languages, Progamming, and Thoughts'
+url:              peterzukerman.github.io
+baseurl:          /
 
-# About/contact
 author:
-  name:              Mark Otto
-  url:               https://twitter.com/mdo
-  email:             markdotto@gmail.com
+  name:           'Peter Zukerman'
+  url:            https://twitter.com/peterzuker
 
+paginate:         5
+plugins: [jekyll-paginate, redcarpet, jekyll-gist, pygments.rb]
+paginate_path: "page:num"
 # Custom vars
-version:             1.0.0
+version:          2.1.0
+
+github:
+  repo:           https://github.com/peterzukerman/peterzukerman.github.io
