--- a/_config.yml
+++ b/_config.yml
@@ -16,10 +16,9 @@ author:
   name:           'Peter Zukerman'
   url:            https://twitter.com/peterzuker
 
+plugins_dir: [jekyll-paginate, redcarpet, jekyll-gist, pygments.rb, jekyll-avatar, jekyll-admin]
 paginate:         5
-plugins: [jekyll-paginate, redcarpet, jekyll-gist, pygments.rb, jekyll-avatar, jekyll-admin]
 paginate_path: "page:num"
-gems: [jekyll-paginate, redcarpet, jekyll-gist, pygments.rb, jekyll-avatar, jekyll-admin]
 # Custom vars
 version:          2.1.0
 
