--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ author:
   name:           'Peter Zukerman'
   url:            https://twitter.com/peterzuker
 
-plugins:          [jekyll-paginate, redcarpet, jekyll-gist, jekyll-avatar, jekyll-admin]
+plugins:          [jekyll-paginate, redcarpet, jekyll-gist, pygments.rb, jekyll-avatar, jekyll-admin]
 paginate:         5
 paginate_path:    "page:num"
 ighlighter: rouge
