--- a/_data/index/projects.yml
+++ b/_data/index/projects.yml
@@ -1,4 +1,26 @@
-- name: leonids
-  descr: "Bacon ipsum dolor sit amet doner meatball jowl short ribs, chicken prosciutto salami frankfurter. Pig drumstick turducken short ribs, brisket meatloaf ham hock shankle andouille corned beef strip steak. Venison ham bresaola strip steak. Pork belly ribeye prosciutto t-bone."
+- name: Audio Modifications Generator
+  descr: "Generates augmentations on audio files (changing pitch, duration, and volume). Meant for artificially increasing dataset for better machine learning prediction."
   image: pong.png
-  github: https://github.com/renyuanz/leonids
+  github: https://github.com/peterzukerman/Audio-modGenerator
+
+  name: Tools for Siberian Yupik
+  descr: "Created ebooks and translation materials for the low resource language Siberian Yupik. Developing a Recurrent Neural Network for a Yupik language model, which is used to artificially increase corpus size through text generation."
+  image: pong.png
+  github: https://github.com/peterzukerman/YupikAnalyzer
+
+  name: Japanese/Chinese Character Dictionary
+  descr: "Dictionary application written in C++. Provides the definition and example
+  sentences for a given word. Adding support for analyzing handwritten characters using TensorFlow."
+  image: pong.png
+  github: https://github.com/peterzukerman/Kanji-Lookup-Tool
+
+  name: DDR Techincal Elements Parser
+  descr: "Open source rhythm/dance game step analysis. Allows for easier development
+  and parsing of charts. Written in python. The dataset is based on a Naive-Bayes classifier."
+  image: pong.png
+  github: https://github.com/peterzukerman/DDR-Crossover-Finder
+
+  name: Korean Numbers Practice Tool
+  descr: "Application for learning korean numbers (native/sino) with various counters. Randomly generated."
+  image: pong.png
+  github: https://github.com/peterzukerman/Korean-Number-Counter-Practice
