social media links

--- a/_config.yml
+++ b/_config.yml
@@ -35,11 +35,11 @@ kramdown:
 owner:
   name: Peter Zukerman
   avatar: profile.png
-  job: "My Thoughts"
+  job: "Languages, Programming, and Thoughts"
   bio: ""
-  email: pzukerman17@gmail.com
+  email: "pzukerman17@gmail.com"
   disqus-shortname:
-  twitter: peterzuker #username
+  twitter: "peterzuker" #username
   facebook: #username
   google:
     plus: #username
@@ -48,13 +48,13 @@ owner:
     ad-client:
     ad-slot:
   bing-verify:
-  github: peterzukerman #username
+  github: "peterzukerman" #username
   gitlab: #username
-  stackoverflow: 2967004/peterzuker #123456/username   from a "http://stackoverflow.com/users/123456/username" link
-  linkedin: peterzukerman #username
+  stackoverflow: "2967004/peterzuker" #123456/username   from a "http://stackoverflow.com/users/123456/username" link
+  linkedin: "peterzukerman" #username
   skype: #username
   xing: #username
-  instagram: peterzukerman #username
+  instagram: "peterzukerman" #username
   lastfm: #username
   tumblr: #username
   pinterest: #username
