--- a/_config.yml
+++ b/_config.yml
@@ -52,7 +52,7 @@ owner:
   bing-verify:
   github: peterzukerman #username
   gitlab: #username
-  stackoverflow: #123456/username   from a "http://stackoverflow.com/users/123456/username" link
+  stackoverflow: #123456/username   from a "https://stackoverflow.com/users/123456/username" link
   linkedin: peterzukerman #username
   skype: #username
   xing: #username
