--- a/_config.yml
+++ b/_config.yml
@@ -39,7 +39,7 @@ owner:
   avatar: profile.png
   job: "Languages, Programming, and Thoughts"
   bio: ""
-  email: pzukerman17@gmail.com
+  email: peter@zuker.io
   disqus-shortname:
   twitter: peterzuker #username
   facebook: #username
