--- a/_config.yml
+++ b/_config.yml
@@ -40,7 +40,7 @@ owner:
   job: "Languages, Programming, and Thoughts"
   bio: ""
   email: peter@zuker.io
-  disqus-shortname:
+  disqus-shortname: zukerio
   twitter: peterzuker #username
   facebook: #username
   google:
