--- a/_data/index/skills.yml
+++ b/_data/index/skills.yml
@@ -2,5 +2,5 @@
 
 label: Ability
 id : cs
-aspects: Motivation, GitHub, Java, HTML/CSS, Japanese, Python
-percentage: 100, 65, 70, 60, 90, 85
+aspects: GitHub, Java, HTML/CSS, Python, Japanese, Juggling
+percentage: 70, 70, 70, 95, 90, 85
