--- a/_data/index/skills.yml
+++ b/_data/index/skills.yml
@@ -2,5 +2,5 @@
 
 label: Ability
 id : cs
-aspects: GitHub, Java, HTML/CSS, Python, Japanese, Juggling
-percentage: 70, 70, 70, 95, 90, 85
+aspects: GitHub, Juggling, NLP, Python, Japanese, Russian, Java
+percentage: 80, 90, 87, 95, 80, 100, 90
