--- a/_config.yml
+++ b/_config.yml
@@ -45,7 +45,7 @@ owner:
   facebook: #username
   google:
     plus: #username
-    analytics:
+    analytics: G-S4QS0BFDZW
     verify:
     ad-client:
     ad-slot:
