updated profile pic + twitter

--- a/_config.yml
+++ b/_config.yml
@@ -41,7 +41,7 @@ owner:
   bio: ""
   email: pzukerman17@gmail.com
   disqus-shortname: zukerio
-  twitter: peterzuker #username
+  twitter: _doinkmachine #username
   facebook: #username
   google:
     plus: #username
