updated descriptions and a few about pages

--- a/_config.yml
+++ b/_config.yml
@@ -37,7 +37,7 @@ kramdown:
 owner:
   name: Peter Zukerman
   avatar: profile.png
-  job: "Languages, Programming, and Thoughts"
+  job: "Languages, AI, and NLP"
   bio: ""
   email: pzukerman17@gmail.com
   disqus-shortname: zukerio
