--- a/_data/index/education.yml
+++ b/_data/index/education.yml
@@ -1,7 +1,10 @@
+- name: University of Washington
+  link: https://www.compling.uw.edu/
+  date: 2021 - 2023
+
 - name: University of Illinois at Urbana Champaign
   link: https://illinois.edu/
-  date: 2017 - <i class="fa fa-clock-o" aria-hidden="true" title="Until Now"></i>
-  descr: <br> (expected graduation in 2021)
+  date: 2017 - 2021
 
 - name: University School
   link: https://www.us.edu/
