--- a/_data/index/careers.yml
+++ b/_data/index/careers.yml
@@ -1,5 +1,15 @@
 # careers section data
 # if you don't have language feature(language.yml is empty), ignore "i18n" items
+- name: Infoscitex
+  link: https://www.infoscitex.com/
+  date: Since Dec. 2021
+  job: Natural Language Processing Scientist
+
+- name: Spotify (Findaway)
+link: https://www.findaway.com/
+date: Spring - Winter 2022
+job: Backend Engineer
+
 - name: Radiate
   link: https://www.radiatetheworld.com/
   date: Spring 2021
@@ -19,18 +29,3 @@
   link: https://www.codemash.org/
   date: January 2019
   job: Volunteer and Presenter
-
-- name: Rockwell Automation
-  link: https://www.sap.com/
-  date: Summer 2018
-  job: Software Development Intern
-
-  name: Genki Japanese School
-  link: https://genkijacs.com/
-  date: Summer 2016
-  job: Student
-
-  name: Rakuten OverDrive
-  link: https://www.sap.com/
-  date: Summer 2015
-  job: Data Science Intern
