--- a/_data/index/projects.yml
+++ b/_data/index/projects.yml
@@ -3,6 +3,7 @@ Large Pre-trained Language Models
   descr: "Investigating the extent to which verb alternation classes are encoded in the embeddings of Large Pretrained Language Models (PLMs) such as BERT"
   image: pong.png
   website: https://arxiv.org/pdf/2209.04811.pdf
+  github: https://github.com/peterzukerman/bert-verb-alternations
 
 - name: Twitter Sarcasm Detection
   descr: "Classifies a given sequence of tweets (responses) as sarcastic or non-sarcastic. Based on BERT."
